rdatamarket 0.6.4 (2012-02-06)
--------------------------------------------------------------------------------

* Send Referer header when full URL passed in to dminfo, dmlist or dmseries

rdatamarket 0.6.3 (2011-10-25)
--------------------------------------------------------------------------------

* Fix: curl configuration (e.g. proxy) was not used when resolving short URLs



rdatamarket 0.6.2 (2011-08-30)
--------------------------------------------------------------------------------

* Send User-Agent request header with version and platform information

* Work around RJSONIO::fromJSON borking on raw response from RCurl::getForm



rdatamarket 0.6.1 (2011-08-26)
--------------------------------------------------------------------------------

* Give full control of Curl options, including (importantly) HTTP proxying

* Fix bug: format/print of dminfo object was failing when source_source absent



rdatamarket 0.6 (2011-08-23)
--------------------------------------------------------------------------------

First release.