@@ -55,6 +55,17 @@ test_that("Info is reused if given to dminfo", {
 context("DataMarket timeseries")
 
 test_that("Timeseries from dataset 17tm works", {
+  series <- dmseries('17tm!kqc=a.17.d')
+  expect_is(series, 'zoo')
+  expect_identical(names(series), c('Algeria', 'Angola', 'Argentina'))
+  expect_equal(as.numeric(series[1]), c(26.481, 0.655, 13.7647586207))
+  expect_equal(as.numeric(series[2]), c(33.872, 0.631, 14.6439655172))
+  times <- index(series)
+  expect_identical(times[1], 1965L)
+  expect_identical(times[2], 1966L)
+})
+
+test_that("Timeseries from dataset 17tm with old DS format works", {
   series <- dmseries('17tm|kqc=a.17.d')
   expect_is(series, 'zoo')
   expect_identical(names(series), c('Algeria', 'Angola', 'Argentina'))
@@ -76,7 +87,7 @@ test_that("Timeseries with parameter dimension filtering works", {
 
   # or, in short:
   series_from_param <- dmseries('17tm', Country='Algeria')
-  series_from_dsstring <- dmseries('17tm|kqc=a')
+  series_from_dsstring <- dmseries('17tm!kqc=a')
   expect_identical(series_from_param, series_from_dsstring)
 
 })
@@ -84,7 +95,7 @@ test_that("Timeseries with parameter dimension filtering works", {
 test_that("Timeseries with multi-valued parameter dimension filtering works", {
   series_from_param <- dmseries('17tm', Country=c('Algeria', 'Angola',
     'Argentina'))
-  series_from_dsstring <- dmseries('17tm|kqc=a.17.d')
+  series_from_dsstring <- dmseries('17tm!kqc=a.17.d')
   expect_identical(series_from_param, series_from_dsstring)
 })
 
@@ -139,6 +150,19 @@ test_that("Timeseries with date granularity works", {
 context("DataMarket long-form data ('list')")
 
 test_that("Long-form data from dataset 17tm works", {
+  lis <- dmlist('17tm!kqc=a.17.d')
+  expect_is(lis, 'data.frame')
+  expect_identical(names(lis), c('Country', 'Year', 'Value'))
+  expect_identical(as.character(lis$Country), c(
+    replicate(46, 'Algeria'),
+    replicate(46, 'Angola'),
+    replicate(46, 'Argentina')
+  ))
+  expect_identical(lis$Year, c(replicate(3, 1965:2010)))
+  expect_equal(lis$Value[1:4], c(26.481, 33.872, 39.076, 42.904))
+})
+
+test_that("Long-form data from dataset 17tm with old DS format works", {
   lis <- dmlist('17tm|kqc=a.17.d')
   expect_is(lis, 'data.frame')
   expect_identical(names(lis), c('Country', 'Year', 'Value'))
@@ -153,13 +177,13 @@ test_that("Long-form data from dataset 17tm works", {
 
 test_that("Long-form data with parameter dimension filtering works", {
   list_from_param <- dmlist('17tm', Country='Algeria')
-  list_from_dsstring <- dmlist('17tm|kqc=a')
+  list_from_dsstring <- dmlist('17tm!kqc=a')
   expect_identical(list_from_param, list_from_dsstring)
 })
 
 test_that("Long-form with multi-valued parameter dimension filtering works", {
   list_from_param <- dmlist('17tm', Country=c('Algeria', 'Angola', 'Argentina'))
-  list_from_dsstring <- dmlist('17tm|kqc=a.17.d')
+  list_from_dsstring <- dmlist('17tm!kqc=a.17.d')
   expect_identical(list_from_param, list_from_dsstring)
 })
 
